# Data-Engineering-global-azure-terraform-modules

./: .bandit  .flake8  .gitignore  .pre-commit-config.yaml  BRANCH_PROTECTION_COMPLETION.md  CONTRIBUTING.md  DEV_CONTAINER_COMPLETION.md  LICENSE  Makefile  PHASE_1_COMPLETION.md  PROJECT_PLAN.md  README.md  pyproject.toml
.devcontainer/: .dockerignore  Dockerfile  README.md  devcontainer.json  health-check.sh  post-create.sh
.github/: CODEOWNERS  mlc_config.json
.github/workflows/: auto-tag-test.yml  auto-tag.yml  validate.yml
docs/: branch-protection-setup.md  container-vs-local.md  development-workflow.md  examples.md  getting-started.md  module-development.md  terraform-testing-framework.md
examples/: README.md
scripts/: __init__.py  container-health-check.sh  format.py  health_check.py  local-health-check.sh  quick-demo.sh  test_changed_modules.py  validate.py
terraform/: README.md
terraform/foundation/: README.md
terraform/foundation/diagnostic-settings/: README.md  locals.tf  main.tf  outputs.tf  variables.tf
terraform/foundation/diagnostic-settings/examples/basic/: README.md  main.tf  outputs.tf  variables.tf
terraform/foundation/diagnostic-settings/examples/complex-configuration/: README.md  main.tf  outputs.tf  variables.tf
terraform/foundation/diagnostic-settings/examples/eventhub-streaming/: README.md  main.tf  outputs.tf  variables.tf
terraform/foundation/diagnostic-settings/examples/multi-destination/: README.md  main.tf  outputs.tf  variables.tf
terraform/foundation/resource-group/: COMPLETION_SUMMARY.md
terraform/resource-group/: README.md  outputs.tf  variables.tf
tests/: conftest.py  test_diagnostic_settings_module.py  test_format.py  test_resource_group_module.py  test_validate.py
tests/terraform/: base.py  base_validation.py  config.py
tests/terraform/fixtures/: test_data.py
tests/terraform/modules/: test_diagnostic_settings_validation.py  test_resource_group_terraform.py  test_resource_group_validation.py
(+8 files in other folders)
